find_package(ZLIB)
set_package_properties(ZLIB PROPERTIES TYPE PURPOSE "Enables compression support")

if (ZLIB_FOUND)
   list(APPEND incs ${ZLIB_INCLUDE_DIRS})
   list(APPEND libs ${ZLIB_LIBRARIES})
   add_definitions(-DHAS_ZLIB=1)
endif (ZLIB_FOUND)

include_directories(${incs})
add_library(chck_buffer buffer.c)
target_link_libraries(chck_buffer PRIVATE ${libs})
install_libraries(chck_buffer)
install_headers(endianess.h buffer.h)

if (CHCK_BUILD_TESTS)
   add_executable(buffer_test test.c)
   target_link_libraries(buffer_test PRIVATE chck_buffer)
   add_test_ex(buffer_test)
endif ()
