set(CMAKE_THREAD_PREFER_PTHREAD 1)
find_package(Threads)
if (THREADS_FOUND)
   find_package(Valgrind)
   if (VALGRIND_FOUND)
      add_definitions(-DHAS_VALGRIND=1)
      include_directories(${VALGRIND_INCLUDE_DIRS})
   endif (VALGRIND_FOUND)

   if ("${CMAKE_THREAD_LIBS_INIT}" STREQUAL "")
      find_library(THREAD_LIB NAMES pthread)
   else ()
      set(THREAD_LIB ${CMAKE_THREAD_LIBS_INIT})
   endif ()

   add_subdirectory(queue)
endif (THREADS_FOUND)
